# yumani

./: .gitignore  AGENT_SETUP.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
configs/: m3-small-ollama.example.json  my-local-agent.example.json  q36-local.example.json
docs/: architecture.md  cloud-isolation.md  cui-setup.md  migration-from-legacy.md  migration-from-q36.md  principles.md  roadmap.md
src/yumani/: __init__.py  calibration.py  cli.py  config.py  context.py  cui.py  provider.py  proxy.py  safety.py  setup_flow.py  state.py
tests/: test_cli.py  test_config.py  test_context_state.py  test_proxy.py
