[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "yumani"
version = "0.1.1"
description = "A local-only LLM harness for memory-safe agent work."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Lee Jaeduk" }]
keywords = ["llm", "local-llm", "agent", "proxy", "openai-compatible", "ollama", "mlx"]
dependencies = []

[project.scripts]
yumani = "yumani.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

